[package]
name = "rs_fec_conv"
version = "0.2.10"
authors = ["Benjamin Roepken <broepken57@hotmail.com>"]
edition = "2018"
description="Convolutional Encoder and Viterbi Decoder built with Rust bindings for integration with Python"
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.maturin]
requires-dist = []

[dependencies]
rayon = "1.0.2"
numpy = "0.7.0"
ndarray = "0.13"
transpose = "0.2.0"
array2d = "0.2.1"

[dependencies.pyo3]
version = "0.8.5"
features = ["extension-module"]
# default-features = false

[lib]
name = "rs_fec_conv"
crate-type = ["cdylib"]

